Fixes for JIRO build
 - Replaces AdoptOpenJDK with Oracle JDK 8 for JavaFX support
 - Tries to reduce the memory requirements for RCPTT test cases

--- a/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.tests/pom.xml
@@ -25,7 +25,7 @@
                     <aut>
                         <explicit>${autPath}</explicit>
                         <vmArgs>
-                            <vmArg>${argLine}</vmArg>
+                            <vmArg>-Xmx2GB ${argLine}</vmArg>
                         </vmArgs>
                     </aut>
                     <runner>
