[571356] Updates composite site creation
Removes old, Ant-based solution for locally updating the composite sites
and replaces it with a shell script based solution that downloads the
composite descriptors from download.eclipse.org, modifies them and
uploads the modified versions back.

--- a/releng/org.eclipse.viatra.update/pom.xml
+++ b/releng/org.eclipse.viatra.update/pom.xml
@@ -12,6 +12,15 @@
     <artifactId>org.eclipse.viatra.update</artifactId>
     <packaging>eclipse-repository</packaging>
     <build>
+        <resources>
+            <resource>
+                <directory>resources</directory>
+                <includes>
+                    <include>version.*</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
@@ -30,231 +39,4 @@
             </plugin>
         </plugins>
     </build>
-       <profiles>
-        <profile>
-            <id>build-integration-composite</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>BUILD_TYPE</name>
-                    <value>integration</value>
-                </property>
-            </activation>
-                    <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.eclipse.tycho.extras</groupId>
-                        <artifactId>tycho-eclipserun-plugin</artifactId>
-                        <version>${tycho.version}</version>
-                        <configuration>
-                            <applicationsArgs>
-                                <applicationsArg>-application org.eclipse.ant.core.antRunner</applicationsArg>
-                                <applicationsArg>-buildfile ${project.basedir}/packaging-p2composite.ant</applicationsArg>
-                                <applicationsArg>p2.composite.add</applicationsArg>
-                                <applicationsArg>-Dsoftware.download.area=${viatra.download.area}</applicationsArg>
-                                <applicationsArg>-Dupdates.dir=${viatra.updates.dir}</applicationsArg>
-                                <applicationsArg>-Dsite.label="VIATRA"</applicationsArg>
-                                <applicationsArg>-Dproject.build.directory=${project.build.directory}</applicationsArg>
-                                <applicationsArg>-DunqualifiedVersion=${unqualifiedVersion}</applicationsArg>
-                                <applicationsArg>-DbuildQualifier=${buildQualifier}</applicationsArg>
-                                <applicationsArg>-Dbuild.type=${BUILD_TYPE}</applicationsArg>
-                            </applicationsArgs>
-                            <repositories>
-                                <repository>
-                                    <id>simrel</id>
-                                    <layout>p2</layout>
-                                    <url>${simrel.repository.url}</url>
-                                </repository>
-                            </repositories>
-                            <dependencies>
-                                <dependency>
-                                    <artifactId>org.eclipse.ant.core</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.apache.ant</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
-                                    <type>eclipse-feature</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
-                                    <type>eclipse-feature</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.ds</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                            </dependencies>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>add-p2-composite-repository</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>eclipse-run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>build-milestone-composite</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>BUILD_TYPE</name>
-                    <value>milestone</value>
-                </property>
-            </activation>
-                    <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.eclipse.tycho.extras</groupId>
-                        <artifactId>tycho-eclipserun-plugin</artifactId>
-                        <version>${tycho.version}</version>
-                        <configuration>
-                            <applicationsArgs>
-                                <applicationsArg>-application org.eclipse.ant.core.antRunner</applicationsArg>
-                                <applicationsArg>-buildfile ${project.basedir}/packaging-p2composite.ant</applicationsArg>
-                                <applicationsArg>p2.composite.add</applicationsArg>
-                                <applicationsArg>-Dsoftware.download.area=${viatra.download.area}</applicationsArg>
-                                <applicationsArg>-Dupdates.dir=${viatra.updates.dir}</applicationsArg>
-                                <applicationsArg>-Dsite.label="VIATRA"</applicationsArg>
-                                <applicationsArg>-Dproject.build.directory=${project.build.directory}</applicationsArg>
-                                <applicationsArg>-DunqualifiedVersion=${unqualifiedVersion}</applicationsArg>
-                                <applicationsArg>-DbuildQualifier=${buildQualifier}</applicationsArg>
-                                <applicationsArg>-Dbuild.type=${BUILD_TYPE}</applicationsArg>
-                            </applicationsArgs>
-                            <repositories>
-                                <repository>
-                                    <id>simrel</id>
-                                    <layout>p2</layout>
-                                    <url>${simrel.repository.url}</url>
-                                </repository>
-                            </repositories>
-                            <dependencies>
-                                <dependency>
-                                    <artifactId>org.eclipse.ant.core</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.apache.ant</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
-                                    <type>eclipse-feature</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
-                                    <type>eclipse-feature</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.ds</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                            </dependencies>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>add-p2-composite-repository</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>eclipse-run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>build-release-composite</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>BUILD_TYPE</name>
-                    <value>release</value>
-                </property>
-            </activation>
-                    <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.eclipse.tycho.extras</groupId>
-                        <artifactId>tycho-eclipserun-plugin</artifactId>
-                        <version>${tycho.version}</version>
-                        <configuration>
-                            <applicationsArgs>
-                                <applicationsArg>-application org.eclipse.ant.core.antRunner</applicationsArg>
-                                <applicationsArg>-buildfile ${project.basedir}/packaging-p2composite.ant</applicationsArg>
-                                <applicationsArg>p2.composite.add</applicationsArg>
-                                <applicationsArg>-Dsoftware.download.area=${viatra.download.area}</applicationsArg>
-                                <applicationsArg>-Dupdates.dir=${viatra.updates.dir}</applicationsArg>
-                                <applicationsArg>-Dsite.label="VIATRA"</applicationsArg>
-                                <applicationsArg>-Dproject.build.directory=${project.build.directory}</applicationsArg>
-                                <applicationsArg>-DunqualifiedVersion=${unqualifiedVersion}</applicationsArg>
-                                <applicationsArg>-DbuildQualifier=${buildQualifier}</applicationsArg>
-                                <applicationsArg>-Dbuild.type=${BUILD_TYPE}</applicationsArg>
-                            </applicationsArgs>
-                            <repositories>
-                                <repository>
-                                    <id>simrel</id>
-                                    <layout>p2</layout>
-                                    <url>${simrel.repository.url}</url>
-                                </repository>
-                            </repositories>
-                            <dependencies>
-                                <dependency>
-                                    <artifactId>org.eclipse.ant.core</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.apache.ant</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
-                                    <type>eclipse-feature</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
-                                    <type>eclipse-feature</type>
-                                </dependency>
-                                <dependency>
-                                    <artifactId>org.eclipse.equinox.ds</artifactId>
-                                    <type>eclipse-plugin</type>
-                                </dependency>
-                            </dependencies>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>add-p2-composite-repository</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>eclipse-run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
