--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -26,10 +26,8 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<viatra.main.version>2.6.0-SNAPSHOT</viatra.main.version>
 		<cbi.jarsigner.version>1.1.3</cbi.jarsigner.version>
+		<sign.build>false</sign.build>
 		<simrel.repository.url>http://download.eclipse.org/releases/2019-06</simrel.repository.url>
-		<!-- Composite site related properties -->
-		<viatra.updates.dir>updates</viatra.updates.dir>
-		<viatra.download.area>target/composite</viatra.download.area>
 		<!-- Maven deploy related properties -->
 		<viatra.deploy.release>https://repo.eclipse.org/content/repositories/viatra2-releases/</viatra.deploy.release>
 		<viatra.deploy.snapshot>https://repo.eclipse.org/content/repositories/viatra2-snapshots/</viatra.deploy.snapshot>
@@ -296,186 +294,11 @@
 	</pluginRepositories>
 	<profiles>
 		<profile>
-			<id>sign_integration</id>
+			<id>sign</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 				<property>
-					<name>BUILD_TYPE</name>
-					<value>integration</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-pack200a-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<id>pack200-normalize</id>
-								<goals>
-									<goal>normalize</goal>
-								</goals>
-								<phase>verify</phase>
-								<configuration>
-									<supportedProjectTypes>
-										<supportedProjectType>eclipse-plugin</supportedProjectType>
-										<supportedProjectType>eclipse-test-plugin</supportedProjectType>
-									</supportedProjectTypes>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<!-- Note that plugins bound to same phase will be executed in the same 
-						order as they are listed, so that metadata generated after signing -->
-					<plugin>
-						<groupId>org.eclipse.cbi.maven.plugins</groupId>
-						<artifactId>eclipse-jarsigner-plugin</artifactId>
-						<version>${cbi.jarsigner.version}</version>
-						<executions>
-							<execution>
-								<id>sign</id>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-								<phase>verify</phase>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-pack200b-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<id>pack200-pack</id>
-								<goals>
-									<goal>pack</goal>
-								</goals>
-								<phase>verify</phase>
-								<configuration>
-									<supportedProjectTypes>
-										<supportedProjectType>eclipse-plugin</supportedProjectType>
-										<supportedProjectType>eclipse-test-plugin</supportedProjectType>
-									</supportedProjectTypes>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-p2-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<id>p2-metadata</id>
-								<goals>
-									<goal>p2-metadata</goal>
-								</goals>
-								<phase>verify</phase>
-							</execution>
-						</executions>
-						<configuration>
-							<defaultP2Metadata>false</defaultP2Metadata>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>sign_milestone</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<property>
-					<name>BUILD_TYPE</name>
-					<value>milestone</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-pack200a-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<id>pack200-normalize</id>
-								<goals>
-									<goal>normalize</goal>
-								</goals>
-								<phase>verify</phase>
-								<configuration>
-									<supportedProjectTypes>
-										<supportedProjectType>eclipse-plugin</supportedProjectType>
-										<supportedProjectType>eclipse-test-plugin</supportedProjectType>
-									</supportedProjectTypes>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<!-- Note that plugins bound to same phase will be executed in the same 
-						order as they are listed, so that metadata generated after signing -->
-					<plugin>
-						<groupId>org.eclipse.cbi.maven.plugins</groupId>
-						<artifactId>eclipse-jarsigner-plugin</artifactId>
-						<version>${cbi.jarsigner.version}</version>
-						<executions>
-							<execution>
-								<id>sign</id>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-								<phase>verify</phase>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-pack200b-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<id>pack200-pack</id>
-								<goals>
-									<goal>pack</goal>
-								</goals>
-								<phase>verify</phase>
-								<configuration>
-									<supportedProjectTypes>
-										<supportedProjectType>eclipse-plugin</supportedProjectType>
-										<supportedProjectType>eclipse-test-plugin</supportedProjectType>
-									</supportedProjectTypes>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-p2-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<id>p2-metadata</id>
-								<goals>
-									<goal>p2-metadata</goal>
-								</goals>
-								<phase>verify</phase>
-							</execution>
-						</executions>
-						<configuration>
-							<defaultP2Metadata>false</defaultP2Metadata>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>sign_release</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<property>
-					<name>BUILD_TYPE</name>
-					<value>release</value>
+					<name>sign.build</name>
 				</property>
 			</activation>
 			<build>
