[571356] Reworked composite site maintenance during build
Multiversion composites are no longer maintained as it is quite hard to
consistently maintain their contents (e.g. removing old versions from
integration and maintenance branches); on the other hand, the build
creates an appropriate /latest repository as it is simple to handle via
simple parameters.

Multiversion composites for releases will be maintained manually; for
integration and milestone builds they will be removed entirely to
simplify repository management for the future.

--- a/releng/org.eclipse.viatra.update/pom.xml
+++ b/releng/org.eclipse.viatra.update/pom.xml
@@ -11,12 +11,18 @@
     </parent>
     <artifactId>org.eclipse.viatra.update</artifactId>
     <packaging>eclipse-repository</packaging>
+    <properties>
+        <repository.version>${qualifiedVersion}</repository.version>
+        <timestamp>${maven.build.timestamp}</timestamp>
+    </properties>
     <build>
+        <!-- This block is used to create a file containing the qualified version of the build for the repository deployment script in the Jenkinsfile -->
         <resources>
             <resource>
                 <directory>resources</directory>
                 <includes>
-                    <include>version.*</include>
+                    <include>version</include>
+                    <include>latest/*</include>
                 </includes>
                 <filtering>true</filtering>
             </resource>
