--- a/query/plugins/org.eclipse.viatra.query.tooling.generator.model/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.generator.model/pom.xml
@@ -109,6 +109,10 @@
 								<groupId>org.eclipse.jdt</groupId>
 								<artifactId>org.eclipse.jdt.launching</artifactId>
 							</exclusion>
+							<exclusion>
+                                <groupId>org.eclipse.platform</groupId>
+                                <artifactId>org.eclipse.equinox.common</artifactId>
+                            </exclusion>
 						</exclusions>
 					</dependency>
 					<dependency>
@@ -123,6 +127,10 @@
 							<exclusion>
 								<groupId>org.eclipse.jdt</groupId>
 								<artifactId>org.eclipse.jdt.launching</artifactId>
+							</exclusion>
+							<exclusion>
+							    <groupId>org.eclipse.platform</groupId>
+							    <artifactId>org.eclipse.equinox.common</artifactId>
 							</exclusion>
 						</exclusions>
 					</dependency>
