--- a/documentation/org.eclipse.viatra.documentation.example/plugin.xml
+++ b/documentation/org.eclipse.viatra.documentation.example/plugin.xml
@@ -3,6 +3,7 @@
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.documentation.example.queries.CPSQueries" id="org.eclipse.viatra.documentation.example.queries.CPSQueries">
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.hostIpAddress"/>
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.emptyIpAddress"/>
+      <query-specification fqn="org.eclipse.viatra.documentation.example.queries.runningApplication"/>
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.sameIpAddress"/>
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.ipFormatInvalid"/>
       <query-specification fqn="org.eclipse.viatra.documentation.example.queries.connectedTo"/>
