--- a/query/plugins/org.eclipse.viatra.query.tooling.generator.model.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.generator.model.ui/plugin.xml
@@ -10,7 +10,7 @@
               contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
               default="true"
               extensions="vqgen"
-              icon="platform:/plugin/org.eclipse.viatra.query.tooling.ui/icons/logo2.png"
+              icon="platform:/plugin/org.eclipse.viatra.query.patternlanguage.emf.ui/icons/logo2.png"
               id="org.eclipse.viatra.query.tooling.generator.model.GeneratorModel"
               name="GeneratorModel Editor">
         </editor>
