Adds type tests to runtime test framework
These tests were originally created when the suite was in the examples
repository, this change updates them to the current location, adds
required file headers and also generated a test snapshot with the
results.

It is important to note that one test case is not 100% in synch with the
current implementation, that is cleanly marked in the code (and their
results ignored).

Change-Id: I906f09416853660484f0361aae61deb18b263eb3
Signed-off-by: Zoltán Ujhelyi <zoltan.ujhelyi@incquerylabs.com>
Signed-off-by: Gábor Bergmann <gabor.bergmann@incquerylabs.com>

--- a/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
+++ b/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
@@ -194,6 +194,17 @@
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.helper2"/>
     </group>
   </extension>
+  <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.Types" point="org.eclipse.viatra.query.runtime.queryspecification">
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.Types" id="org.eclipse.viatra.query.runtime.cps.tests.queries.Types">
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.identifiableAny"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.identifierAny"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.identifierEString"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.identifierJString"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.nonceAny"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.nonceEString"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.nonceJString"/>
+    </group>
+  </extension>
   <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.UnnamedVariables" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.UnnamedVariables" id="org.eclipse.viatra.query.runtime.cps.tests.queries.UnnamedVariables">
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.hostInstancesTypeWithDefaultRam"/>
